--- a/package.json
+++ b/package.json
@@ -10,26 +10,36 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.28",
+    "@shopify/flash-list": "2.0.2",
+    "@supabase/supabase-js": "^2.98.0",
     "expo": "~55.0.4",
-    "expo-symbols": "~55.0.4",
     "expo-constants": "~55.0.7",
     "expo-font": "~55.0.4",
+    "expo-image": "~55.0.5",
+    "expo-image-picker": "~55.0.10",
     "expo-linking": "~55.0.7",
+    "expo-location": "~55.1.2",
     "expo-router": "~55.0.3",
+    "expo-secure-store": "~55.0.8",
     "expo-splash-screen": "~55.0.10",
     "expo-status-bar": "~55.0.4",
+    "expo-symbols": "~55.0.4",
     "expo-web-browser": "~55.0.9",
+    "nativewind": "^4.2.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-native": "0.83.2",
-    "react-native-worklets": "0.7.2",
     "react-native-reanimated": "4.2.1",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.23.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.7.2"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
+    "autoprefixer": "^10.4.27",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
   },
   "private": true
