--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shopify/flash-list": "2.0.2",
     "@supabase/supabase-js": "^2.98.0",
     "expo": "~55.0.4",
+    "expo-auth-session": "~55.0.6",
     "expo-constants": "~55.0.7",
     "expo-font": "~55.0.4",
     "expo-image": "~55.0.5",
